# open-trading-api

./: .gitignore  opt_doc.pptx  requirement.txt  requirements.txt
work/: _note.md  agent.py  agent_manager.py  client.py  command_handlers.py  domestic_stock_functions.py  domestic_stock_functions_ws.py  gen_tools.py  info.md  kis_auth.py  kis_tools.py  local_comm.py  mac_hello.md  main.py  note.md  path.md  pyproject.toml  server.py  strategy.py  tech.md  temp.py  test.py  tools.py
work/app/: __init__.py
work/app/comm/: agent_manager.py  comm_handler.py  conn_agents.py  order_manager.py  subs_manager.py
work/app/controller/: agent_manager.py  performance_manager.py
work/app/run/: agent_runner.py  dashboard.html  server_runner.py
work/app/runner/: agent_runner.py  dashboard.html
work/app/strategy.py/: strategy.py
work/common/: __init__.py  optlog.py  tools.py
work/core/base/: .logger.py.un~  logger.py  settings.py  tools.py
work/core/comm/: comm_handler.py  comm_interface.py  conn_agents.py  order_manager.py  server.py  subs_manager.py
work/core/common/: __init__.py  interface.py  optlog.py  setup.py  tools.py
work/intercom/: __init__.py  comm_handler.py
work/kis/: __init__.py  domestic_stock_functions.py  domestic_stock_functions_ws.py  kis_auth.py  ws_data.py
work/model/: __init__.py  account.py  agent.py  client.py  cost.py  order.py
work/scripts/: agent_runner.py  client_dashboard.html  client_runner.py  dashboard.html  log_filter.py  server.py  temp.py  temp1.py  temp2.py  temp3.py
work/strategy/: __init__.py  strategy.py
(+46 files in other folders)
