[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optrading"
version = "0.1.0"
description = "Open Trading Engine"
authors = [
    { name = "Andy", email = "andy@_.com" }
]
dependencies = [] # leave it empty for internal use

[tool.setuptools.packages.find]
where = ["."]
include = ["*"] # packages need to have __init__.py (including subpackages)

